--- a/client/src/components/ContactForm/style.css
+++ b/client/src/components/ContactForm/style.css
@@ -53,7 +53,14 @@ label {
     /* opacity: 75%; */
     background: lightgray;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
+}
+
+.submit-btn {
+    position: relative;
+    z-index: 2;
+    padding: 10px;
+    border-radius: 15px;
 }
 
 @media only screen and (max-width:800px) {
