--- a/client/src/components/Background/style.css
+++ b/client/src/components/Background/style.css
@@ -3,7 +3,6 @@
 .video-container {
     height: 100vh;
     width: 100%;
-    overflow: hidden;
     position: fixed;
     top: 0;
     z-index: -2;
@@ -16,7 +15,7 @@
     top: 0;
     z-index: -1;
     background-color: darkslategray;
-    opacity: 75%;
+    /* opacity: 75%; */
 }
 
 .cover-video {
