--- a/client/src/components/ContactForm/style.css
+++ b/client/src/components/ContactForm/style.css
@@ -19,7 +19,7 @@
     left: 0;
     right: 0;
     background-color: black;
-    opacity: 60%;
+    /* opacity: 60%; */
     border-radius: 25px;
     z-index: 0;
 }
