Added styling to careers page

--- a/client/src/components/CardJob/cardJob.css
+++ b/client/src/components/CardJob/cardJob.css
@@ -1,6 +1,6 @@
 .job-card {
     background-color: rgb(41, 41, 41);
-    margin-top: 25px;
+    margin-bottom: 25px;
     border-radius: 10px;
     color: lightgray;
 }
