--- a/client/src/components/BackgroundVid/backgroundVid.css
+++ b/client/src/components/BackgroundVid/backgroundVid.css
@@ -8,15 +8,15 @@
     z-index: -2;
 }
 
-/* .overlay {
+.overlay {
     height: 100vh;
     width: 100%;
     position: fixed;
     top: 0;
     z-index: -1;
-    background-color: darkslategray;
+    background-color: rgb(71, 85, 85);
     opacity: 75%;
-} */
+}
 
 .cover-video {
     min-width: 100%;
