--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -56,3 +56,44 @@
 }
 
 /* Shop By Category Page */
+
+/* Careers Page */
+.btn-filter {
+    font-weight: 600;
+    padding: 2px 10px;
+    margin: 10px;
+    margin-bottom: 10px;
+    color: lightgray;
+    background-color: rgb(41, 41, 41);
+    border-style: none;
+}
+
+.section-title {
+    color: lightgray;
+}
+
+.job-header {
+    background-color: rgb(41, 41, 41);
+    padding: 15px;
+    border-radius: 10px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.job-section {
+    margin-top: 25px;
+    margin-left: 35px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.job-section-overlay {
+position: absolute;
+background-color: rgb(165, 165, 165);
+top: 0px;
+bottom: 0px;
+left: 0px;
+right: 0px;
+border-radius: 10px;
+opacity: 50%;
+}
