--- a/client/src/components/HomeJumbotron/homeJumbotron.css
+++ b/client/src/components/HomeJumbotron/homeJumbotron.css
@@ -1,10 +1,11 @@
 .jumbotron {
-    overflow: hidden;
     position: relative;
-    padding-top: 0px;
+    padding-top: 10px;
     background-color: unset;
     text-align: center;
     z-index: 0;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
 }
 
 .top-row {
@@ -28,10 +29,6 @@
 
 .lead {
     font-weight: 500;
-}
-
-.my-4 {
-    background: lightgray;  
 }
 
 @media only screen and (max-width:800px) {
