--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -1,7 +1,58 @@
+.hr {
+    position: relative;
+    background-color: lightgray;
+    width: 100%;
+    height: 2px;
+    z-index: 1;
+}
+
+.inputs {
+    position: relative;
+    background: lightgray;
+    width: 100%;
+    z-index: 2;
+}
+
+label {
+    position: relative;
+    margin-top: 15px;
+    display: block;
+    text-align: left;
+    color: lightgray;
+    z-index: 1;
+}
+
+.submit-btn {
+    position: relative;
+    z-index: 2;
+    padding: 3px 10px;
+    border-radius: 5px;
+}
+
+.form-wrapper {
+    position: relative;
+    margin: 0 auto;
+}
+
+.form {
+    padding: 30px;
+    border-radius: 15px;
+}
+
+.form-spacing {
+    margin-top: 25px;
+}
+
+.btn-submit {
+    font-weight: 600;
+    padding: 2px 10px;
+    margin: 10px;
+    margin-bottom: 10px;
+    border-style: none;
+}
+
 .top {
     background-color: rgb(41, 41, 41);
-    /* margin-top: 20px; */
-    /* padding-bottom: 25px; */
 }
 
 .bottom {
@@ -96,4 +147,24 @@ left: 0px;
 right: 0px;
 border-radius: 10px;
 opacity: 50%;
+}
+
+.signup-login {
+    margin-bottom: 25px;
+}
+
+.text-button {
+    background-color: unset;
+    color: white;
+    border-style: none;
+    padding: 0px;
+}
+
+.signup-login-text {
+    
+        position: relative;
+        line-height: 33px;
+        color: lightgray;
+        z-index: 1;
+
 }
