Began work on user page

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -177,3 +177,21 @@ opacity: 50%;
         z-index: 1;
 
 }
+
+/* User Page */
+.sign-out {
+ position: absolute;
+ left: 25px;
+ top: 10px;
+}
+
+.edit {
+    position: absolute;
+    right: 25px;
+    top: 10px;
+}
+
+.user-page {
+    position: relative;
+    margin: 0px;
+}
