--- a/client/src/components/WorkHistory/workhistory.css
+++ b/client/src/components/WorkHistory/workhistory.css
@@ -1,6 +1,7 @@
 .history-row {
     position: relative;
-    padding: 10px;
+    padding-bottom: 10px;
+    margin: 10px;
 }
 
 .work-history-overlay {
