--- a/client/src/components/Application/application.css
+++ b/client/src/components/Application/application.css
@@ -5,7 +5,7 @@
 
 .app-input {
     width: 100%;
-    background-color: rgb(42, 44, 54);
+    background-color: rgb(49, 50, 56);
     color: white;
 }
 
@@ -28,4 +28,8 @@
     font-weight: 400;
     color: white;
     font-size: 18px;
+}
+
+.application-section {
+    margin-bottom: 25px;
 }
