Passed props from user page to application to populate questions

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -200,3 +200,12 @@ opacity: 50%;
     color: lightgray;
     font-size: 16px;
 }
+
+.job-overlay {
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+}
