--- a/client/src/components/Application/application.css
+++ b/client/src/components/Application/application.css
@@ -19,6 +19,7 @@
 }
 
 .application-form {
+    position: relative;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -32,4 +33,31 @@
 
 .application-section {
     margin-bottom: 25px;
+}
+
+.app-title {
+    position: relative;
+    z-index: 1;
+    color: white;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.close-btn {
+    position: absolute;
+    color: white;
+    z-index: 2;
+    right: 0px;
+    top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 3px;
+    background-color: rgb(41, 41, 41);
+}
+
+.close-btn:hover {
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 3px;
+    background-color: red;
 }
