Polished print display and css for full application

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -283,8 +283,7 @@ opacity: 50%;
     }
 
     .print-width {
-        border: 1px;
-        border-style: solid;
         margin-left: 20px;
+        margin-right: 20px;
     }
 }
