--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -271,6 +271,42 @@ opacity: 50%;
     font-weight: bold;
 }
 
+.category-nav-btn {
+    border: none;
+    padding: 5px;
+    font-weight: 600;
+}
+
+.category-nav-btn:hover {
+    background-color: rgb(41, 41, 41);
+    color: white;
+    padding: 5px;
+    font-weight: bold;
+}
+
+.category-nav {
+   position: relative;
+   z-index: 1;
+}
+
+.vertical-center {
+    margin: 0 auto;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+
+  .category-height {
+      min-height: 600px;
+  }
+
+.current-tab {
+    background-color: rgb(41, 41, 41);
+    color: white;
+    padding: 5px;
+}
+
 @media print {
     body {
         margin: 0;
