--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -255,6 +255,29 @@ opacity: 50%;
     background-color: rgb(41, 41, 41);
 }
 
+.delete-btn-manager {
+    position: absolute;
+    color: white;
+    z-index: 2;
+    right: 55px;
+    top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 3px;
+    background-color: rgb(41, 41, 41);
+}
+
+.button-size {
+    height: 32px;
+    width: 30px;
+}
+
+.trash-icon {
+    height: 20px;
+    width: auto;
+    margin-bottom: 2px; 
+}
+
 .app-info-display {
     margin: 0px;
 }
