--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -278,6 +278,10 @@ opacity: 50%;
     margin-bottom: 2px; 
 }
 
+pre {
+    white-space: pre-wrap;
+  }
+
 .app-info-display {
     margin: 0px;
 }
